# agent-systems

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-test.yml
autonomous_intersection/: run.py
autonomous_intersection/models/: instesection.ipynb  intersection.py  intersection_manager.py  trafficModel.py  vehicle.py
autonomous_intersection/visualization/: server.py
scripts/: setup.sh  test.sh
scripts/notebooks/: mesa_testing.ipynb  pathfinding_testing.ipynb
src/ainter/: main.py  run.py
src/ainter/configs/: env_creation.py
src/ainter/data/: agent_results.csv  data.ipynb  model_results.csv
src/ainter/io/cmd/: command.py  create_model_command.py  parsers.py  serve_command.py  validation.py  visualize.py  visualize_command.py
src/ainter/models/: constants.py  instesection.ipynb  intersection.py  traffic_model.py  vehicle.py
src/ainter/models/autonomous_intersection/: intersection_directions.py  lane_directions.py  traffic_lights.py
src/ainter/models/data/: osmnx.py
src/ainter/models/nagel_schreckenberg/: environment.py  intersection.py  model.py  model_mesa.py  road.py  (+3 more)
src/ainter/scripts/: 01.ipynb  pathfinding_testing.ipynb
src/ainter/visualization/: server.py  server_nasch  server_nasch.py  solara.py
test/ainter/: test_fixtures.py
test/ainter/models/: dummy_model.py  test_traffic_model.py
test/resources/: czarnowiejska.json
test/resources/models/: small_graph.json
test/resources/roads/: road1.json  road2.json  road3.json  road4.json  road5.json  road6.json  road7.json  road8.json
(+10 files in other folders)
